fix knxId for eibd

--- a/core/data/pluginConfig.json
+++ b/core/data/pluginConfig.json
@@ -49,7 +49,7 @@
                }
             }
         } ,
-        "knx":
+        "eibd":
         {
           "versions": {
                "Atlas": {
