--- a/core/data/pluginConfig.json
+++ b/core/data/pluginConfig.json
@@ -1,5 +1,20 @@
 {
   "pluginsInfos": {
+        "zwavejs" :
+        {
+          "versions": {
+               "Atlas": {
+                  "port" : "Jeedom Atlas"
+               },
+               "smart": {
+                  "port" : "Odroid C2"
+               },
+              "luna": {
+                  "port" : "Odroid C2"
+               }
+            }
+        } 
+    ,
         "openzwave" :
           {
             "versions": {
