Auto port if enocean plugin is installed on luna

--- a/core/data/pluginConfig.json
+++ b/core/data/pluginConfig.json
@@ -68,6 +68,9 @@
                },
                "smart": {
                   "port" : "Odroid C2"
+               },
+               "Luna": {
+                  "port" : "auto"
                }
             }
         } ,
